// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Organization.Questionnaires organization admin should be able to fetch all questionnaires from organization 1`] = `
Object {
  "node": Object {
    "questionnaires": Object {
      "edges": Array [
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "step": Object {
              "id": "qStepOrga",
            },
            "title": "Questionnaire owner orga",
          },
        },
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "step": null,
            "title": "Questionnaire owner orga non rattaché à une step",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Organization.Questionnaires organization admin should be able to fetch all questionnaires from organization not attached to a step  1`] = `
Object {
  "node": Object {
    "questionnaires": Object {
      "edges": Array [
        Object {
          "node": Object {
            "owner": Object {
              "username": "GIEC",
            },
            "step": null,
            "title": "Questionnaire owner orga non rattaché à une step",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;
